# canary-core

./: .codeclimate.yml  .coveragerc  .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pydeps  README.md  base.env  devcontainer.json  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  tox.ini
.circleci/: config.yml
.devcontainer/: devcontainer.json  post-create-command.sh
.github/workflows/: codeql-analysis.yml
api/: Dockerfile  docker-entrypoint.sh  install_alpine_deps.sh
canary_core/: __init__.py  asgi.py  default_config.yml  settings.py  urls.py  wsgi.py
canary_core/fixtures/: 0100_site.yaml
canary_core/hc_api_connector/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
canary_core/hc_api_connector/fixtures/: xx-basic-api-client.yaml  xx-property.yaml
canary_core/hc_api_connector/migrations/: 0001_initial.py  0002_auto_20211114_0151.py  __init__.py
canary_core/hc_api_connector/tests/: YWRkcmVzcz0xMjgrQ2hlc3RudXQrU3QuJnppcGNvZGU9MDIxMDg=.json  __init__.py  conftest.py  mock_api.py  mock_auth.py  test_basic_api_client.py  test_mock_api.py  test_primary_endpoint.py  test_property_model.py
compose/: dev.yml
config/: dev-config.yml  gh.env
db/: Dockerfile
